@@ -1,56 +1,48 @@
 package com.fledge.fledgeserver.support.service;
 
-import com.fledge.fledgeserver.canary.entity.CanaryProfile;
 import com.fledge.fledgeserver.canary.repository.CanaryProfileRepository;
 import com.fledge.fledgeserver.exception.CustomException;
 import com.fledge.fledgeserver.exception.ErrorCode;
 import com.fledge.fledgeserver.file.FileService;
 import com.fledge.fledgeserver.member.entity.Member;
+import com.fledge.fledgeserver.member.entity.Role;
 import com.fledge.fledgeserver.member.repository.MemberRepository;
 import com.fledge.fledgeserver.support.dto.request.SupportCreateRequestDto;
-import com.fledge.fledgeserver.support.dto.response.SupportDetailGetResponseDto;
+import com.fledge.fledgeserver.support.dto.request.SupportUpdateRequestDto;
+import com.fledge.fledgeserver.support.dto.response.SupportGetForUpdateResponseDto;
+import com.fledge.fledgeserver.support.dto.response.SupportGetResponseDto;
 import com.fledge.fledgeserver.support.entity.Support;
 import com.fledge.fledgeserver.support.entity.SupportImage;
+import com.fledge.fledgeserver.support.repository.SupportImageRepository;
 import com.fledge.fledgeserver.support.repository.SupportRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional
 @RequiredArgsConstructor
 public class SupportService {
-    private final CanaryProfileRepository canaryProfileRepository;
     private final MemberRepository memberRepository;
+    private final CanaryProfileRepository canaryProfileRepository;
     private final SupportRepository supportRepository;
     private final FileService fileService;
+    private final SupportImageRepository supportImageRepository;
 
-    @Transactional
     public void createSupport(Long memberId, SupportCreateRequestDto supportCreateRequestDto) {
-         // 자립 청소년인지 검증 -> canary_profile 테이블에 없으면 권한이 없는 것
-        canaryProfileRepository.findByMemberId(memberId)
+        Member member = memberRepository.findMemberById(memberId)
                 .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
+        if (member.getRole() != Role.CANARY) {
+            throw new CustomException(ErrorCode.UNAUTHORIZED_REQUEST);
+        }
 
         Support support = Support.builder()
-                .title(supportCreateRequestDto.getTitle())
-                .reason(supportCreateRequestDto.getReason())
-                .item((supportCreateRequestDto.getItem()))
-                .price(supportCreateRequestDto.getPrice())
-                .purchaseUrl(supportCreateRequestDto.getPurchaseUrl())
-                .checkPeriod(supportCreateRequestDto.getCheckPeriod())
-                .checkCount(supportCreateRequestDto.getCheckCount())
-                .expirationDate(supportCreateRequestDto.getExpirationDate())
-                .address(supportCreateRequestDto.getAddress())
-                .detailAddress(supportCreateRequestDto.getDetailAddress())
-                .zip(supportCreateRequestDto.getZip())
-                .name(supportCreateRequestDto.getName())
-                .phone(supportCreateRequestDto.getPhone())
+                .member(member)
+                .supportCreateRequestDto(supportCreateRequestDto)
                 .build();
-
         supportRepository.save(support);
 
         for (String imageUrl : supportCreateRequestDto.getImages()) {
@@ -60,23 +52,78 @@ public class SupportService {
                     .build();
             support.getImages().add(supportImage);
         }
-        System.out.println("done");
     }
 
-    @Transactional(readOnly = true)
-    public SupportDetailGetResponseDto getSupport(Long supportId) {
-        // 후원 게시글 조회
-        Support support = supportRepository.findSupportById(supportId)
+    public SupportGetResponseDto getSupport(Long supportId) {
+        Support support = supportRepository.findSupportByIdWithFetch(supportId)
                 .orElseThrow(() -> new CustomException(ErrorCode.SUPPORT_NOT_FOUND));
 
-        // 후원 게시글의 이미지 URL -> Presigned URL로 변환
-        List<String> presignedImageUrl = support.getImages().stream()
-                .map(SupportImage::getImageUrl)
-                .map(fileService::getFileUrl)
-                .collect(Collectors.toList());
+        return new SupportGetResponseDto(
+                support.getMember().getId(),
+                support.getMember().getNickname(),
+                support.getTitle(),
+                support.getReason(),
+                support.getItem(),
+                support.getPurchaseUrl(),
+                support.getPrice(),
+                // Images Presigned-URL처리
+                support.getImages().stream()
+                        .map(supportImage -> fileService.getFileUrl(supportImage.getImageUrl()))
+                        .toList(),
+                support.getCheckPeriod(),
+                support.getCheckCount(),
+                support.getExpirationDate()
+        );
+    }
 
-        // TODO :: 후원내역(SupportRecord)에 대한 내용 함께 반환
+    public SupportGetForUpdateResponseDto getSupportForUpdate(Long memberId, Long supportId) {
+        Support support = supportRepository.findSupportByIdWithFetch(supportId)
+                .orElseThrow(() -> new CustomException(ErrorCode.SUPPORT_NOT_FOUND));
 
-        return new SupportDetailGetResponseDto(support, presignedImageUrl);
+        if (support.getMember().getId() != memberId) {
+            throw new CustomException(ErrorCode.NO_ACCESS);
+        }
+
+        // 이미지를 Presigned URL로 처리
+        List<String> imageUrls = support.getImages().stream()
+                .map(supportImage -> fileService.getFileUrl(supportImage.getImageUrl()))
+                .toList();
+
+        return new SupportGetForUpdateResponseDto(
+                support.getMember().getId(),
+                support.getMember().getNickname(),
+                support.getTitle(),
+                support.getReason(),
+                support.getItem(),
+                support.getPurchaseUrl(),
+                support.getPrice(),
+                imageUrls,
+                support.getCheckPeriod(),
+                support.getCheckCount(),
+                support.getExpirationDate()
+        );
+    }
+
+    public void updateSupport(Long memberId, Long supportId, SupportUpdateRequestDto supportUpdateRequestDto) {
+        Support support = supportRepository.findSupportByIdWithFetch(supportId)
+                .orElseThrow(() -> new CustomException(ErrorCode.SUPPORT_NOT_FOUND));
+
+        if (support.getMember().getId() != memberId) {
+            throw new CustomException(ErrorCode.NO_ACCESS);
+        }
+        support.update(supportUpdateRequestDto);
+        support.getImages().clear();
+
+        List<SupportImage> newImages = supportUpdateRequestDto.getImages().stream()
+                .map(imageUrl -> new SupportImage(support, imageUrl))
+                .toList();
+
+        support.getImages().addAll(newImages);
+
+        // 5. 기존 이미지 삭제
+        support.getImages().clear(); // 기존 이미지 제거
+
+        // 6. 새로운 이미지 추가
+        support.getImages().addAll(newImages);
     }
 }
